k8s/02-application.yaml
# --- API Service ---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: beni2/pizza-api:v1
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enricher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enricher
  template:
    metadata:
      labels:
        app: enricher
    spec:
      containers:
        - name: enricher
          image: beni2/pizza-enricher:v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preprocessor
  template:
    metadata:
      labels:
        app: preprocessor
    spec:
      containers:
        - name: preprocessor
          image: beni2/pizza-preprocessor:v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-evaluator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-evaluator
  template:
    metadata:
      labels:
        app: risk-evaluator
    spec:
      containers:
        - name: risk-evaluator
          image: beni2/pizza-risk:v1
